1.5.0
   - bug [12582] "Datadock skal kunne prioritere pakker fra ES"
   - bug [12538] "Datoer gemmes som VARCHAR i køen. Skal ændres til DATE"
   - bug [12435] "ojdbc14.jar virker tilsyneladende ikke op imod Oracle11"
   - bug [12371] "Datadock dør med outOfMemoryException"
OpensearchNamespaceContext merget fra branch 1.4 til head
   - bug [12320] "Problem med dannelse af FedoraPid i ForceFedoraPid"