@@ -19,7 +19,7 @@
 
 package dk.dbc.opensearch.plugins;
 
-import dk.dbc.opensearch.common.metadata.MetaData;
+import dk.dbc.opensearch.common.metadata.IMetaData;
 import dk.dbc.opensearch.common.pluginframework.IPluginEnvironment;
 import dk.dbc.opensearch.common.pluginframework.PluginException;
 import dk.dbc.opensearch.common.pluginframework.PluginType;
@@ -72,7 +72,7 @@ public class DocbookMergerTest {
         cargo = new CargoContainer();
         cargo.add( DataStreamType.OriginalData, "katalog", "710100", "da", "text/xml", originalData.getBytes() );
         //  cargo.setIndexingAlias( "710100", DataStreamType.OriginalData );
-        //MetaData dc = new DublinCore( new ByteArrayInputStream( dublinCore.getBytes() ) );
+        //IMetaData dc = new DublinCore( new ByteArrayInputStream( dublinCore.getBytes() ) );
         byte[] dc = dublinCore.getBytes();
         cargo.add( DataStreamType.DublinCoreData,
                    "dublinCoreData",
